--- a/deploys/snapraid/templates/snapraid-sync.service.j2
+++ b/deploys/snapraid/templates/snapraid-sync.service.j2
@@ -4,6 +4,6 @@ After=local-fs.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/local/bin/snapraid sync
+ExecStart=/usr/local/bin/snapraid -q sync
 StandardOutput=journal
 StandardError=journal
